<resources>
    <string name="app_name">AppComponents</string>
    <string name="label_name">Digite seu nome</string>
    <string name="label_email">Digite seu e-mail</string>
    <string name="label_button">Enviar</string>
    <string name="label_result">Resultado</string>
    <string name="label_button_clear">Limpar</string>
    <string name="label_colors">Cores</string>
    <string name="check_red">Vermelho</string>
    <string name="check_black">Preto</string>
    <string name="check_branco">Branco</string>
    <string name="label_gender">Sexo</string>
    <string name="radio_male">Masculino</string>
    <string name="radio_female">Feminino</string>
    <string name="label_switch_pass">Lembrar senha</string>
    <string name="label_switch_off">DESLIGADO</string>
    <string name="label_switch_on">LIGADO</string>
    <string name="label_toggle_off">DESLIGADO</string>
    <string name="label_toggle_on">LIGADO</string>
    <string name="label_pass_result">Resultado Senha</string>
    <string name="label_button_show_toast">Abrir Toast</string>
    <string name="label_button_alert_dialog">Abrir Alert Dialog</string>
    <string name="label_button_load_progressbar">Carregar</string>
    <string name="label_how_much_funny_are_you">O quão divertido você é?</string>
    <string name="label_value_scale_0_to_10">em uma escala de 0 até 10</string>
    <string name="label_button_recover_progress">Recuperar Progresso</string>
    <string name="label_title">Título</string>
    <string name="label_year">Ano</string>
    <string name="label_genre">Gênero</string>
</resources>